fixed some small css on mobile bugs

--- a/style.css
+++ b/style.css
@@ -34,21 +34,22 @@ body {
     margin: 200px 20px 20px 20px;
 }
 
-.about .text {
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-
 .about .text h1 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     font-size: 2.5rem;
     margin-bottom: 20px;
 }
 
-.about .text h2 {
+.about .text h3 {
     margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 .about .text .text-seperater {
@@ -196,10 +197,12 @@ body {
 
     .header-holder .pages-holder {
         flex-direction: column;
+        align-items: center;
     }
 
     .header-holder .pages-holder h2 {
         margin-bottom: 20px;
+        margin-right: 0;
     }
 
     .about {
